# zephyr

./: .gitignore
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.npcm4xx  adc_npcm4xx.c  adc_shell.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.npcm4xx  clock_control_npcm.c  clock_control_npcm4xx.c
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.npcm4xx  counter_npcm4xx.c  counter_npcm_itim32.c
drivers/espi/: CMakeLists.txt  Kconfig  Kconfig.npcm4xx  espi_npcm4xx.c  host_subs_npcm4xx.c
drivers/ethernet/: CMakeLists.txt  Kconfig  eth_npcm4xx.c  (+1 more)
kernel/: thread.c
soc/arm/npcm4xx/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  pin_id.h  sig_id.h
soc/arm/npcm4xx/common/: CMakeLists.txt  NPCM4XX.h  header.c  header.h  hfcg_drv.c  hfcg_drv.h  npcm4xx_sram_vector_table.S  npcm4xx_sram_vector_table.h  npcm4xx_sram_vector_table.ld  reg_access.h  regs.h  soc_clock.h  soc_common.c  soc_common.h  soc_dt.h  soc_espi.h  soc_gpio.h  soc_host.h  soc_miwu.h  syscfg_drv.c  syscfg_drv.h  system_NPCM4XX.h
soc/arm/npcm4xx/common/ImageGenerator/: Crypto.py  FunctionDefine.py  ImageGenerator.py  NuMsCNG.py  NuPKCS11.py  OpenSSL.py  Util.py  XmlParser.py
soc/arm/npcm4xx/common/ImageGenerator/Xml/: _NTC_config.xml
soc/arm/npcm4xx/common/reg/: reg_access.h  reg_def.h
soc/arm/npcm4xx/npcm400f/: CMakeLists.txt  Kconfig.defconfig.npcm400f  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  gdma.c  gdma.h  header.c  jtag_master.c  jtag_master.h  linker.ld  mpu_regions.c  pin_def_list.h  sig_def_list.h  soc.c  soc.h
(+180 files in other folders)
